[package]
name = "algorithms"
version = "0.1.0"
authors = ["Gustav Gränsbo <gusgr644@student.liu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "merge_sort"
harness = false

[[bench]]
name = "quick_sort"
harness = false